<resources>
    <string name="facebook_app_id">272827070076036</string>
    <string name="fb_login_protocol_scheme">fb272827070076036</string>
    <string name="app_name">Wheels Classifieds</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="name">Name</string>
    <string name="SignUpemail">Email</string>
    <string name="password1">Password</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">logo</string>
    <string name="signup1">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="sign_up_instead">Sign up Instead</string>
    <string name="dont_have_an_account">Dont have an Account ?</string>
    <string name="wheels">WHEELS</string>
    <string name="splashLogo">splashScreenLogo</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open"></string>
    <string name="navigation_drawer_close"></string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="post_a_new_ad">Post a New Ad</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="login_signup">Login / Signup</string>
    <string name="share">Share</string>
    <string name="don_t_have_an_account_signup_instead">Don\'t have an account Signup instead</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name_contactus">Name</string>
    <string name="message_contactus">Message</string>
    <string name="email_contact">Email</string>
    <string name="submit_contact">Submit</string>
    <string name="wheelsplashscreen">wheelsplashscreen</string>
    <string name="don_t_have_an_account">Don\'t Have an Account</string>
    <string name="loginbutton">loginbutton</string>
    <string name="submit_forget_password">Submit Forget Password</string>
    <string name="search_vehicles">Search a Vehical</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="create_your_account">Create your account</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="sign_in_with_facebook">Sign in With Facebook</string>
    <string name="by_creating_or_logging_in_with_an_account_you_agree_with_our_terms_of_conditions">By Creating or Logging in With an Account you Agree with our Terms of Conditions</string>
    <string name="log_in">Log In</string>
    <string name="having_problem_signing_up">Having Problem Signing Up ?</string>
    <string name="login_to_my_account"><![CDATA[Login To my Account >]]></string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="enter_password">Enter Password</string>
    <string name="cannot_acces_your_account2">Cannot acces your account ?</string>
    <string name="subject_of_email">Subject of Email</string>
    <string name="cars_fragment">Cars Fragment</string>
    <string name="bikes_fragment">bikes fragment</string>
    <string name="accessories_fragment">Accessories fragment</string>
    <string name="for_example_rim_type_usage_etc">For Example : Rim type, Usage etc</string>
    <string name="enter_car_assembly">Enter Car Assembly</string>
    <string name="assembly">Assembly :</string>
    <string name="enter_body_color">Enter Body Color</string>
    <string name="body_color">Body Color :</string>
    <string name="enter_mileage">Enter Mileage</string>
    <string name="mileage">Mileage :</string>
    <string name="registration_city">Registration City :</string>
    <string name="enter_price">Enter Price</string>
    <string name="price">Price :</string>
    <string name="description">Description</string>
    <string name="location">Location :</string>
    <string name="enter_city">Enter City</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile">Profile</string>
    <string name="textview">textview</string>
    <string name="img_cst_adp_1">img_cst_adp_1</string>
    <string name="textview2">textview2</string>
    <string name="img_cst_adp2">img_cst_adp2</string>
    <string name="fuel_type">Fuel Type :</string>
    <string name="transmission">Transmission :</string>
    <string name="enter_engine_power_in_cc">Enter Engine Power (in cc)</string>
    <string name="engine_power">Engine Power :</string>
    <string name="enter_model_no">Enter Model No.</string>
    <string name="model_no">Model no.</string>
    <string name="for_example_rust_proof_branded_etc">For Example : Rust Proof, Branded etc</string>
    <string name="enter_material_type">Enter Material Type</string>
    <string name="material">Material :</string>
    <string name="enter_part_dimensions">Enter Part Dimensions</string>
    <string name="dimensions">Dimensions</string>
    <string name="enter_vehicle_model">Enter Vehicle Model</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="enter_model_year">Enter Model Year</string>
    <string name="model_year">Model Year :</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="brand_name">Brand Name :</string>
    <string name="condition">Condition :</string>
    <string name="import_type">Import Type :</string>
    <string name="enter_part_model">Enter Part Model</string>
    <string name="forward"></string>
    <string-array name="fuelEnteries">
        <item></item>
        <item>Petrol</item>
        <item>CNG</item>
        <item>Diesel</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="TransEnteries">
        <item></item>
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>
    <string-array name="ConditionEnteries">
        <item></item>
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string-array name="ImportedEnteries">
        <item></item>
        <item>Local</item>
        <item>Imported</item>
    </string-array>
    <string name="abc"></string>
    <string name="muhammad_mustaqeem">Muhammad Mustaqeem</string>
    <string name="img_prof_pic">img_prof_pic</string>
    <string name="my_ads">My Ads</string>
    <string name="my_chats">My Chats</string>
    <string name="saved_ads">Saved Ads</string>
    <string name="delete_account">Delete Account</string>
    <string name="my_alerts">My Alerts</string>
    <string name="submit">Submit</string>
</resources>

